--- a/app/globals.css
+++ b/app/globals.css
@@ -68,6 +68,33 @@
   }
 }
 
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 0.6;
+  }
+}
+
+.animate-fadeIn {
+  animation: fadeIn 0.25s ease-in-out;
+}
+
+@keyframes slideUp {
+  from {
+    transform: translateY(-10px);
+  }
+  to {
+    transform: translateY(0px);
+  }
+}
+
+.animate-slideUp {
+  animation: slideUp 0.2s ease-in;
+}
+
+
 /* Scoped to the editor */
 
 @layer base {
