--- a/app/globals.css
+++ b/app/globals.css
@@ -65,7 +65,7 @@
   }
   body {
     @apply bg-background text-foreground;
-    overscroll-behavior-x: none;
+    overscroll-behavior: none;
   }
 }
 
