small changes to mobile menu

--- a/app/globals.css
+++ b/app/globals.css
@@ -77,22 +77,22 @@
 .tiptap .node-nextImage.ProseMirror-selectednode {
   outline: 3px solid var(--purple);
 }
-/* 
+
 .tiptap p.is-editor-empty:first-child::before {
   color: #adb5bd;
   content: attr(data-placeholder);
   float: left;
   height: 0;
   pointer-events: none;
-} */
+}
 
-.tiptap p.is-empty::before {
+/* .tiptap p.is-empty::before {
   color: #adb5bd;
   content: attr(data-placeholder);
   float: left;
   height: 0;
   pointer-events: none;
-}
+} */
 
 @layer base {
   * {
