--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
+input, textarea {
+  @apply bg-transparent;
+}
+
+a {
+  @apply cursor-pointer;
+}
+
 @layer base {
   :root {
     --background: 0 0% 100%;
