--- a/public/twitter-light.css
+++ b/public/twitter-light.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap');
 
 :root {
-  --background: black;
-  --text-color: white;
+  --background: aliceblue;
+  --text-color: black;
   --primary: hsl(205.59, 100%, 60%);
   --font-family: 'Noto Sans', sans-serif;
 }
