--- a/public/barbie.css
+++ b/public/barbie.css
@@ -1,12 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap');
 
 :root {
-  --background: black;
-  --foreground: white;
-  
+  --background: #F7B2BD;
+  --foreground: #053225;
+  --primary: #E34A6F;
+--secondary: #60A561;
+
   --text-color: var(--foreground);
-  --primary: hsl(205.59, 100%, 60%);
-  --font-family: 'Noto Sans', sans-serif;
+ --font-family: 'Noto Sans', sans-serif;
 }
 
 .editor {
