--- a/public/tree.css
+++ b/public/tree.css
@@ -1,12 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap');
 
 :root {
-  --background: black;
-  --foreground: white;
-  
+  --background: #214E34;
+  --foreground: #EBF2FA;
+  --primary: #A5BE00;
+  --secondary: #D88C9A;
+
   --text-color: var(--foreground);
-  --primary: hsl(205.59, 100%, 60%);
-  --font-family: 'Noto Sans', sans-serif;
+ --font-family: 'Noto Sans', sans-serif;
 }
 
 .editor {
