--- a/public/twitter-light.css
+++ b/public/twitter-light.css
@@ -2,7 +2,9 @@
 
 :root {
   --background: aliceblue;
-  --text-color: black;
+  --foreground: black;
+
+  --text-color: var(--foreground);
   --primary: hsl(205.59, 100%, 60%);
   --font-family: 'Noto Sans', sans-serif;
 }
