--- a/app/globals.css
+++ b/app/globals.css
@@ -62,10 +62,21 @@
   }
 }
 
+.full-width {
+	left: 50%;
+	margin-left: -50vw;
+	margin-right: -50vw;
+	max-width: 100vw;
+	position: relative;
+	right: 50%;
+	width: 100vw;
+}
+
 body {
   background-color: var(--background);
   color: var(--foreground);
   overscroll-behavior: none;
+  overflow-x: hidden;
 }
 
 h1, h2, h3, h4, h5 {
