--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family:"circular";
+  src: url("/public/circular.ttf") format("truetype");
+}
+
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
+
 @layer base {
   :root {
     --background: hsl(0, 0%, 100%);
@@ -30,11 +37,11 @@
     --chart-3: hsl(197, 37%, 24%);
     --chart-4: hsl(43, 74%, 66%);
     --chart-5: hsl(27, 87%, 67%);
-    --font-family: monospace;
+    --font-family: 'circular', 'Nunito', sans-serif;
   }
 
   .dark {
-    --font-family: monospace;
+    --font-family: 'circular', 'Nunito', sans-serif;
     --background: hsl(210, 20%, 10%);
     --foreground: hsl(0, 0%, 98%);
     --card: hsl(240, 10%, 3.9%);
@@ -142,7 +149,7 @@ a {
 
 /* Scoped to the editor */
 .tiptap {
-  /* font-family: var(--font-family); */
+  font-family: var(--font-family);
 }
 
 .title {
