--- a/app/globals.css
+++ b/app/globals.css
@@ -9,6 +9,7 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
 
+
 @layer base {
   :root {
     --background: hsl(0, 0%, 100%);
@@ -241,4 +242,35 @@ a {
   outline: 3px solid gold;
   @apply rounded-xl;
   transition: outline 0.15s;
+}
+
+/* task list */
+ul[data-type="taskList"] {
+  margin: 0.6rem 0;
+  padding-left: 4px;
+  list-style-type: none;
+}
+
+/* task list */
+
+ul[data-type="taskList"] li {
+  display: flex;
+  align-items: baseline; /* Align items to the baseline to match the first line of the input */
+  margin: 0;
+}
+
+ul[data-type="taskList"] li input[type="checkbox"] {
+  @apply w-5 h-5;
+  transform: translateY(4px); /* Slightly lower the position of the task list items */
+  accent-color: var(--primary); /* Display primary color when checked */
+}
+
+ul[data-type="taskList"] li label {
+  display: flex;
+  align-items: center; /* Center the checkbox and label text vertically */
+}
+
+ul[data-type="taskList"] li div {
+  margin-left: 0.7rem; /* Add some space between the checkbox and the text */
+  flex-grow: 1; /* Allow the text to take the remaining space */
 }
